force-app/main/default/objects/Doctor__c/Doctor__c.object-meta.xml
<CustomObject>
    <description>Doctor Details</description>
    <label>Doctor</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Doctor_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>