force-app/main/default/objects/Doctor__c/fields/Active_Patients_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Patients_Count__c</fullName>
    <label>Active Patients Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>