force-app/main/default/objects/Doctor__c/fields/Doctor_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Record_Type__c</fullName>
    <formula>RecordType.Name &amp; &quot; Doctor&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Of Doctor</label>
    <type>Text</type>
</CustomField>