force-app/main/default/objects/Doctor__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Doctors</relationshipLabel>
    <relationshipName>Doctors</relationshipName>
    <type>Lookup</type>
</CustomField>