force-app/main/default/objects/Doctor__c/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <label>Evaluation</label>
    <length>18</length>
    <type>Text</type>
</CustomField>