force-app/main/default/objects/Doctor__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last_Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>