force-app/main/default/objects/Doctor__c/fields/Purpose_of_visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_visit__c</fullName>
    <label>Purpose of visit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>