force-app/main/default/objects/Doctor__c/fields/Trainee_program__c.field-meta.xml
<CustomField>
    <fullName>Trainee_program__c</fullName>
    <label>Trainee program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surgery Residency</fullName>
            </value>
            <value>
                <fullName>Fellowship Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>