force-app/main/default/objects/Doctor__c/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment</label>
    <referenceTo>Treatment__c</referenceTo>
    <relationshipLabel>Doctors</relationshipLabel>
    <relationshipName>Doctors</relationshipName>
    <type>Lookup</type>
</CustomField>