force-app/main/default/objects/Doctor__c/fields/Visit_duration__c.field-meta.xml
<CustomField>
    <fullName>Visit_duration__c</fullName>
    <label>Visit duration</label>
    <type>DateTime</type>
</CustomField>