force-app/main/default/objects/Doctor__c/recordTypes/Visitors.recordType-meta.xml
<RecordType>
    <fullName>Visitors</fullName>
    <active>true</active>
    <label>Visitors</label>
</RecordType>